<resources>
    <string name="app_name">Music Player</string>
    <string name="Rock_music">Rock</string>
    <string name="HipHop_music">HipHop</string>
    <string name="Blues_music">Blues</string>
    <string name="play_button">Play/Pause</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="todo">TODO</string>
    <string name="lilwayne">Lil Wayne</string>
    <string name="eminem">Eminem</string>
    <string name="B.I.G">Notorious B.I.G.</string>
    <string name="jayz">Jay-Z</string>
    <string name="kanye">Kanye West</string>
    <string name="lollipop">Lollipop</string>
    <string name="name">My Name Is</string>
    <string name="lose">Lose Yourself</string>
    <string name="loveYourLie">Love The Way You Lie</string>
    <string name="oneMoreChance">One More Chance</string>
    <string name="MoMoneyMoProblems">Mo Money Mo Problems</string>
    <string name="hypnotize">Hypnotize</string>
    <string name="cantKnockOfTheHustle">\"Can\'t Knock The Hustle \"</string>
    <string name="ExcuseMeMiss">Excuse Me Miss</string>
    <string name="Stronger">Stronger</string>
    <string name="springtide">Springtide</string>
    <string name="weAreHeadingToTheEast">We Are Heading To The East</string>
    <string name="scottHomes">Scott Holmes</string>
    <string name="mildWild">Mild Wild</string>
    <string name="upbeatParty">Upbeat Party</string>
    <string name="storybook">Storybook</string>
    <string name="littleIdea">\"Little Idea \"</string>
    <string name="stompsAndClaps">Stomps and Claps</string>
    <string name="hotshot">\" Hotshot\"</string>
    <string name="sayGoodnight">Say Goodnight</string>
    <string name="lineSpacing">Line Spacing</string>
    <string name="queensLodge">Queen\'s Lodge</string>
    <string name="latelyKingOfYeah">Lately Kind of Yeah</string>
    <string name="heartFeel">Heart Feel</string>
    <string name="royBrown">Roy Brown</string>
    <string name="robertJohnson">Robert Johnson</string>
    <string name="johnLeeHooker">John Lee Hooker</string>
    <string name="willieDixon">Willie Dixon</string>
    <string name="juniorParker">Junior Parker</string>
    <string name="johnnyCash">Johnny Cash</string>
    <string name="slimHarpo">Slim Harpo</string>
    <string name="littleWalker">Little Walter</string>
    <string name="jimmyReed">Jimmy Reed</string>
    <string name="goodRockinTonight">Good Rockin\' Tonight</string>
    <string name="loveInVain">Love In Vain</string>
    <string name="boomBoom">Boom Boom</string>
    <string name="sweetHomeChicago">Sweet Home Chicago</string>
    <string name="iJustWantToMakeYouToYou">I just Want To Make Love To you</string>
    <string name="mysteryTrain">\" Mystery Train\"</string>
    <string name="cry">Cry, Cry, Cry</string>
    <string name="iGotLOveIfYouWantIt">I Got Love If You Want It</string>
    <string name="juke">Juke</string>
    <string name="BrightLightsBigCity">Bright Lights, Big City</string>

</resources>
