<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/music"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/player_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/player_song_text"
        tools:text="Song" />

    <TextView
        android:id="@+id/player_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/player_composer_text"
        tools:text="Artist" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:max="100"
        android:padding="@dimen/activity_vertical_margin"
        android:progress="20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            style="@style/ButtonStyle"
            android:background="@color/pause_button"
            android:text="@string/prev_button"  />

        <Button
            style="@style/ButtonStyle"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/play_button"
            android:text="@string/play_button" />

        <Button
            style="@style/ButtonStyle"
            android:background="@color/stop_button"
            android:text="@string/next_button"  />

    </LinearLayout>

</LinearLayout>